--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/UP953068/Dissertation#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "connect": "^3.7.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-openid-connect": "^2.14.0",
+    "express-openid-connect": "^2.15.0",
+    "mongodb": "^5.3.0",
+    "mysql": "^2.18.1",
+    "pg": "^8.10.0",
     "serve-static": "^1.15.0"
   }
 }
